--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,5 @@ pipelines:
         script:
           - pip install -r requirements.txt
           - pip install swolfpy
+          - pytest -v
           - pytest --cov=swolfpy tests/         
