--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,8 @@ image: python:3.7.3
 pipelines:
   default:
     - step:
+        caches:
+          - pip
         script:
           - pip install -r requirements.txt
           - pip install swolfpy
