bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,4 +11,5 @@ pipelines:
           - pip
         script:
           - pip install -r requirements.txt
-          - pip install swolfpy         
+          - pip install swolfpy
+          - pytest --cov=swolfpy tests/   
