--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
-python_files = tests/test_*.py
+python_paths = swolfpy
+testpaths = tests
+python_files = tests/test_*.py  tests/*_test.py
+minversion = 5.4
+addopts = --verbose --durations=10 --color=yes  --cov=swolfpy
