--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,8 @@ pipelines:
     - step:
         script:
           - pip install -r requirements.txt
-          - pip install swolfpy
+          - sudo apt update
+          - sudo apt install libgl1-mesa-glx
           - py.test 
 
 
