--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,10 +8,12 @@ pipelines:
   default:
     - step:
         script:
+          - conda install -y -q -c conda-forge -c cmutel -c haasad brightway2 jupyter
           - pip install -r requirements.txt
-          - sudo apt update
-          - sudo apt install libgl1-mesa-glx
-          - py.test 
+          - pip install https://bitbucket.org/swolfpy/swolfpy_inputdata/get/master.zip
+          - pip install https://bitbucket.org/swolfpy/swolfpy_processmodels/get/master.zip
+          - pip install https://bitbucket.org/swolfpy/swolfpy/get/master.zip
+          - pytest
 
 
 
