bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ pipelines:
   default:
     - step:
         script:
-          - conda install -y -q -c conda-forge -c cmutel -c haasad brightway2 jupyter
+          - pip install -y -q -c conda-forge -c cmutel -c haasad brightway2 jupyter
           - pip install -r requirements.txt
           - pip install https://bitbucket.org/swolfpy/swolfpy_inputdata/get/master.zip
           - pip install https://bitbucket.org/swolfpy/swolfpy_processmodels/get/master.zip
