--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,13 +2,13 @@
 # Only use spaces to indent your .yml configuration.
 # You can specify a custom docker image from Docker Hub as your build environment.
 
-image: python:3.7.3
+image: continuumio/miniconda3
 
 pipelines:
   default:
     - step:
         script:
-          - bash Miniconda3-latest-Linux-x86_64.sh
+          - conda update conda
           - conda install -y -q -c conda-forge -c cmutel -c haasad brightway2 jupyter
           - pip install -r requirements.txt
           - pip install https://bitbucket.org/swolfpy/swolfpy_inputdata/get/master.zip
