--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,7 @@
 # Only use spaces to indent your .yml configuration.
 # You can specify a custom docker image from Docker Hub as your build environment.
 
-image: continuumio/miniconda3
+image: bildcode/pyside2
 
 pipelines:
   default:
