--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,7 @@ pipelines:
           - conda config --append channels cmutel
           - conda config --append channels haasad
           - conda create --name swolfpy python=3.7
+          - conda init bash
           - conda activate swolfpy
           - pip install -r requirements.txt
           - pip install https://bitbucket.org/swolfpy/swolfpy-inputdata/get/master.zip
