test swolfpy docker

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,15 +2,15 @@
 # Only use spaces to indent your .yml configuration.
 # You can specify a custom docker image from Docker Hub as your build environment.
 
-image: python:3.7.3
+image: sardarmehni/swolfy:latest
 
 pipelines:
   default:
     - step:
         script:
-          - pip install -r requirements.txt
-          - pip install https://bitbucket.org/swolfpy/swolfpy-inputdata/get/master.zip
-          - pip install https://bitbucket.org/swolfpy/swolfpy-processmodels/get/master.zip
+          - conda activate swolfpy 
+          - pip3 install https://bitbucket.org/swolfpy/swolfpy-inputdata/get/master.zip
+          - pip3 install https://bitbucket.org/swolfpy/swolfpy-processmodels/get/master.zip
           - ls -R /opt/atlassian/pipelines/agent/build/
           - ls -R /opt/atlassian/pipelines/agent/build/tests
           - pytest
