--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,10 +9,9 @@ pipelines:
     - step:
         script:
           - conda activate swolfpy 
-          - pip3 install https://bitbucket.org/msm_sardar/swolfpy-inputdata/get/master.zip
-          - pip3 install https://bitbucket.org/msm_sardar/swolfpy-processmodels/get/master.zip
-          - ls -R /opt/atlassian/pipelines/agent/build/
-          - ls -R /opt/atlassian/pipelines/agent/build/tests
+          - pip install -r requirements.txt
+          - pip install https://bitbucket.org/msm_sardar/swolfpy-inputdata/get/master.zip
+          - pip install https://bitbucket.org/msm_sardar/swolfpy-processmodels/get/master.zip
           - pytest
 
 
