--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,9 +33,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        conda env list
-        source activate base
-        conda env update --file environment_dev.yml
+        conda env create -f environment_dev.yml
+        conda activate swolfpy
         pip install https://github.com/SwolfPy-Project/swolfpy-inputdata/archive/refs/heads/master.zip
         pip install https://github.com/SwolfPy-Project/swolfpy-processmodels/archive/refs/heads/master.zip
         pip install -r requirements.txt
