--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,8 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        conda env create -f environment_dev.yml
-        conda activate swolfpy
+        conda env update --file environment_dev.yml --name base
         pip install https://github.com/SwolfPy-Project/swolfpy-inputdata/archive/refs/heads/master.zip
         pip install https://github.com/SwolfPy-Project/swolfpy-processmodels/archive/refs/heads/master.zip
         pip install -r requirements.txt
