--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   buid:
-    name: Ex1 (${{ matrix.python-version }}, ${{ matrix.os }})
+    name: build (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -36,7 +36,7 @@ jobs:
       
       - name: Install dependencies
         run: |
-          conda env update --file environment.yml --name base
+          conda env update --file environment.yml --name test
       - name: Test with pytest
         run: |
           py.test
