--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: test
-          environment-file: environment_dev.yml
+          environment-file: etc/environment_dev.yml
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
 
