--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,8 +50,13 @@ jobs:
       with:
         python-version: 3.7
 
+    - name: Conda info
+      shell: bash -l {0}
+      run: conda info
+
     - name: Install dependencies
       run: |
+        conda env list
         conda env update --file environment_dev.yml --name base
         pip install https://github.com/SwolfPy-Project/swolfpy-inputdata/archive/refs/heads/master.zip
         pip install https://github.com/SwolfPy-Project/swolfpy-processmodels/archive/refs/heads/master.zip
