--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -5,12 +5,12 @@ channels:
   - cmutel
   - haasad
 dependencies:
-  - brightway2
+  - brightway2==2.3
   - pip
   - pip:
     - graphviz
     - xlrd
-    - PySide2
+    - PySide2==5.14
     - plotly
     - pandas
     - pyDOE
