--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,6 +32,10 @@ jobs:
         conda env update --file environment_dev.yml --name base
         pip install https://github.com/SwolfPy-Project/swolfpy-inputdata/archive/refs/heads/master.zip
         pip install https://github.com/SwolfPy-Project/swolfpy-processmodels/archive/refs/heads/master.zip
+        
+    - name: Check channels
+      run: |
+        conda config --show channels
 
     - name: Check installed packages
       run: |
