--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -7,10 +7,10 @@ channels:
 dependencies:
   - pip
   - pip:
-    - brightway2==2.3
+    - brightway2==2.3.0
     - graphviz
-    - xlrd
-    - PySide2==5.14
+    - xlrd==1.2.0
+    - PySide2==5.14.0
     - plotly
     - pandas
     - pyDOE
