--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,8 +30,10 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment_dev.yml --name base
+        conda activate base
         pip install https://github.com/SwolfPy-Project/swolfpy-inputdata/archive/refs/heads/master.zip
         pip install https://github.com/SwolfPy-Project/swolfpy-processmodels/archive/refs/heads/master.zip
+        
         
     - name: Check channels
       run: |
