--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -1,11 +1,10 @@
-name: swolfpy
+name: base
 channels:
   - defaults
   - conda-forge
   - cmutel
   - haasad
 dependencies:
-  - python=3.7
   - pip
   - pip:
     - PySide2
