--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-PySide2
-graphviz
+bw-migrations==0.1
+bw2analyzer==0.9.4
+bw2calc==1.8.0
+bw2data==3.6.2
+bw2io==0.7.12.1
+bw2parameters==0.6.6
+brightway2==2.3
+PySide2==5.14
 plotly
+graphviz
 pyDOE
 pytest
 pytest-cov
