--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-bw-migrations==0.1
+brightway2==2.3
 bw2analyzer==0.9.4
 bw2calc==1.8.0
 bw2data==3.6.2
 bw2io==0.7.12.1
 bw2parameters==0.6.6
-brightway2==2.3
-PySide2==5.14
-plotly
+bw-migrations==0.1
+coverage
 graphviz
+plotly
 pyDOE
+PySide2==5.14
 pytest
 pytest-cov
 pytest-flake8
-coverage
+swolfpy_inputdata
+swolfpy_processmodels
+xlrd==1.2.0
