--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: "_ui.py$|_rc.py$"
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -15,7 +16,6 @@ repos:
     rev: 5.12.0
     hooks:
     -   id: isort
-
 
 -   repo: https://github.com/pycqa/docformatter
     rev: v1.5.1
@@ -53,7 +53,6 @@ repos:
             tests,
             --rcfile=pyproject.toml,
             -rn, # Only display messages
-            -sn, # Don't display the score
         ]
 
     -   id: pytest
