--- a/pyproject.toml
+++ b/pyproject.toml
@@ -327,4 +327,13 @@ disable = [
   "too-many-statements",
   "too-many-locals",
   "too-many-lines",
+  "c-extension-no-member",
+  "too-many-nested-blocks",
+  "consider-using-enumerate",
+  "unnecessary-lambda-assignment",
+  "no-else-return",
+  "protected-access",
+  "use-dict-literal",
+  "use-list-literal",
+  "broad-exception-caught",
 ]
