--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "swolfpy"
 dynamic = ["version", "readme", "dependencies"]
 description = "Solid Waste Optimization Life-cycle Framework in Python(SwolfPy)."
 license = {text = "GNU GENERAL PUBLIC LICENSE V2"}
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 authors = [
   {name = "Mojtaba Sardarmehni", email = "msardar2@alumni.ncsu.edu"},
 ]
@@ -27,9 +27,7 @@ classifiers = [
     'Intended Audience :: Science/Research',
     'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
     'Natural Language :: English',
-    'Programming Language :: Python :: 3.7',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
     'Operating System :: MacOS :: MacOS X',
     'Operating System :: Microsoft :: Windows',
     'Topic :: Scientific/Engineering :: Information Analysis',
@@ -336,4 +334,6 @@ disable = [
   "use-dict-literal",
   "use-list-literal",
   "broad-exception-caught",
+  "eval-used",
+  "broad-exception-raised",
 ]
