--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ bw2io==0.8.8
 bw2parameters==1.1.0
 coverage
 graphviz
+numpy==1.24.*
+pandas==2.0.*
 plotly
 pyDOE
 PySide2==5.15.2.1
 pytest
 pytest-cov
 pytest-flake8
-swolfpy_inputdata
-swolfpy_processmodels
+scipy==1.8.0
+swolfpy_inputdata==1.0.*
+swolfpy_processmodels==1.0.*
 xlrd==1.2.0
