--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -77,6 +77,7 @@ jobs:
       run: |
         pip list
 
-    - name: Test with pytest
+    - name: Pre-Commit
       run: |
-        py.test
+        git fetch origin master
+        pre-commit run --from-ref origin/master --to-ref HEAD --show-diff-on-failure
