--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-brightway2==2.4.3
+brightway2==2.3
 bw2analyzer==0.10
 bw2calc==1.8.2
-bw2data==3.6.6
+bw2data==3.6.2
 bw2io==0.8.8
 bw2parameters==1.1.0
 coverage
 graphviz
+jupyter
 numpy==1.24.*
 pandas==2.0.*
 plotly
@@ -15,6 +16,6 @@ pytest
 pytest-cov
 pytest-flake8
 scipy==1.8.0
-swolfpy_inputdata==1.0.*
-swolfpy_processmodels==1.0.*
+#swolfpy_inputdata==1.0.*
+#swolfpy_processmodels==1.0.*
 xlrd==1.2.0
