--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -16,6 +16,8 @@ dependencies:
     - bw2parameters==0.6.6
     - coverage
     - graphviz
+    - numpy==1.24.*
+    - pandas==2.0.*
     - plotly
     - pyDOE
     - PySide2==5.15.*
