--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-brightway2==2.3
+brightway2==2.4.1
+bw-migrations==0.1
 bw2analyzer==0.10
 bw2calc==1.8.2
-bw2data==3.6.2
-bw2io==0.8.8
+bw2data==3.6.6
+bw2io==0.8.7
 bw2parameters==1.1.0
 coverage
 graphviz
 jupyter
-numpy==1.24.*
 pandas==2.0.*
+numpy==1.24.*
 plotly
 pyDOE
 PySide2==5.15.*
