--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+brightway2==2.4.1
 bw-migrations==0.1
-bw2analyzer==0.9.4
-bw2calc==1.8.0
-bw2data==3.6.2
-bw2io==0.7.12.1
-bw2parameters==0.6.6
-brightway2==2.3
-PySide2==5.14
-plotly
+bw2analyzer==0.10
+bw2calc==1.8.2
+bw2data==3.6.6
+bw2io==0.8.7
+bw2parameters==1.1.0
+coverage
 graphviz
+jupyter
+pandas==2.0.*
+numpy==1.24.*
+plotly
 pyDOE
+PySide2==5.15.*
 pytest
 pytest-cov
 pytest-flake8
-coverage
+scipy==1.8.0
+#swolfpy_inputdata==1.0.*
+#swolfpy_processmodels==1.0.*
+xlrd==1.2.0
