--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,8 +19,9 @@ build:
 sphinx:
   configuration: docs/conf.py
 
-# Optionally build your docs in additional formats such as PDF and ePub
-formats: all
+# If using Sphinx, optionally build your docs in additional formats such as PDF
+# formats:
+#    - pdf
 
 # Optionally declare the Python requirements required to build your docs
 python:
