--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: "3.9"
+        python-version: 3.9
 
     - name: Add conda to system path
       run: |
@@ -27,6 +27,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        conda update conda
         conda env update --file environment_dev.yml --name base
 
     - name: Check if feature branch exists in swolfpy-inputdata
