--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -5,22 +5,28 @@ channels:
   - cmutel
   - haasad
 dependencies:
-  - brightway2==2.4.1
-  - bw-migrations==0.1
-  - bw2analyzer==0.10
-  - bw2calc==1.8.2
-  - bw2data==3.6.6
-  - bw2io==0.8.7
-  - bw2parameters==1.1.0
-  - coverage
-  - graphviz
-  - plotly
-  - pyDOE
-  - PySide2==5.15.*
-  - pytest
-  - pytest-cov
-  - pytest-flake8
-  - scipy==1.8.0
-  - xlrd==1.2.0
-  - pandas==2.0.*
-  - numpy==1.24.*
+  - python=3.9
+  - pip:
+    - brightway2==2.4.1
+    - bw-migrations==0.1
+    - bw2analyzer==0.10
+    - bw2calc==1.8.2
+    - bw2data==3.6.6
+    - bw2io==0.8.7
+    - bw2parameters==1.1.0
+    - coverage
+    - graphviz
+    - jupyter
+    - pandas==2.0.*
+    - numpy==1.24.*
+    - plotly
+    - pyDOE
+    - PySide2==5.15.2.1
+    - pytest
+    - pytest-cov
+    - pytest-flake8
+    - scipy==1.9.0
+    - swolfpy_inputdata==1.1.*
+    - swolfpy_processmodels==1.1.*
+    - xlrd==1.2.0
+
