--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -5,7 +5,7 @@ channels:
   - cmutel
   - haasad
 dependencies:
-  - pip
+  - python=3.9
   - pip:
     - brightway2==2.4.1
     - bw-migrations==0.1
@@ -16,13 +16,16 @@ dependencies:
     - bw2parameters==1.1.0
     - coverage
     - graphviz
+    - jupyter
+    - pandas==2.0.*
+    - numpy==1.24.*
     - plotly
     - pyDOE
-    - PySide2==5.15.*
+    - PySide2==5.15.2.1
     - pytest
     - pytest-cov
     - pytest-flake8
-    - scipy==1.8.0
+    - scipy==1.9.0
+    - swolfpy_inputdata==1.1.*
+    - swolfpy_processmodels==1.1.*
     - xlrd==1.2.0
-    - pandas==2.0.*
-    - numpy==1.24.*
